--- a/FrontEnd/ApplicationPage/src/styles.scss
+++ b/FrontEnd/ApplicationPage/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+
+body{
+  margin: 0;
+  padding: 0;
+  background: #1e1f22;
+  width: 100vw;
+  height: 100vh;
+}
+
