--- a/FrontEnd/ApplicationPage/src/app/main/approve-request/approve-request.component.html
+++ b/FrontEnd/ApplicationPage/src/app/main/approve-request/approve-request.component.html
@@ -30,17 +30,17 @@
 
     <div class="sort-controls d-flex justify-content-center my-3">
       <div class="me-3">
-        <label class="form-label me-2">Sort By:</label>
+        <label class="form-label text-secondary me-2">Sort By:</label>
         <select class="form-select d-inline-block w-auto" [(ngModel)]="sortBy" (change)="onSortChange(sortBy, sortDirection)">
           <option value="id">ID</option>
-          <option value="status">Approval Status</option>
-          <option value="full_name">Employee</option>
+          <option value="approvalStatus">Status</option>
+          <option value="employee.fullName">Employee</option>
           <option value="comment">Comment</option>
           <option value="LeaveRequestId">Leave Request Id</option>
         </select>
       </div>
       <div>
-        <label class="form-label me-2">Sort Direction:</label>
+        <label class="form-label text-secondary me-2">Sort Direction:</label>
         <select class="form-select d-inline-block w-auto" [(ngModel)]="sortDirection" (change)="onSortChange(sortBy, sortDirection)">
           <option value="asc">Ascending</option>
           <option value="desc">Descending</option>
