--- a/FrontEnd/ApplicationPage/src/app/main/main.component.html
+++ b/FrontEnd/ApplicationPage/src/app/main/main.component.html
@@ -9,6 +9,9 @@
               {{table.tn}}
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="logout()">Logout</a>
+          </li>
         </ul>
       </div>
     </nav>
